--- a/package.json
+++ b/package.json
@@ -7,5 +7,7 @@
     "dev": "vite",
     "build": "vite build"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
+  }
 }
